k8s/heritageflix-modemuze-materialen/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heritageflix-modemuze-materialen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heritageflix-modemuze-materialen
  template:
    metadata:
      labels:
        app: heritageflix-modemuze-materialen
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/heritageflix-modemuze-materialen
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr
