k8s/heritageflix-modemuze-materialen/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heritageflix-modemuze-materialen
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - heritageflix-modemuze-materialen.demo.netwerkdigitaalerfgoed.nl
      secretName: heritageflix-modemuze-materialen-tls
  rules:
    - host: heritageflix-modemuze-materialen.demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heritageflix-modemuze-materialen
                port:
                  number: 80
